--- a/notebooks/01_sql_server_connect.ipynb
+++ b/notebooks/01_sql_server_connect.ipynb
@@ -94,7 +94,7 @@
     "2. Go to 'drivers' or 'stuurprogramma'\n",
     "3. Scroll through the list and find 'ODBC Driver XX for SQL Server\n",
     "\n",
-    "![ODBC Image](images\\ODBC.png)\n",
+    "![ODBC Image](C:\\Users\\YouriDibbet\\PipInstallParty\\images\\ODBC.png)\n",
     "\n",
     "To download drivers visit: \n",
     "https://learn.microsoft.com/en-us/sql/connect/odbc/download-odbc-driver-for-sql-server?view=sql-server-ver16\n",
@@ -120,7 +120,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "C:\\Users\\YouriDibbet\\AppData\\Local\\Temp\\ipykernel_8724\\4202022485.py:1: UserWarning: pandas only supports SQLAlchemy connectable (engine/connection) or database string URI or sqlite3 DBAPI2 connection. Other DBAPI2 objects are not tested. Please consider using SQLAlchemy.\n",
+      "C:\\Users\\YouriDibbet\\AppData\\Local\\Temp\\ipykernel_13696\\4202022485.py:1: UserWarning: pandas only supports SQLAlchemy connectable (engine/connection) or database string URI or sqlite3 DBAPI2 connection. Other DBAPI2 objects are not tested. Please consider using SQLAlchemy.\n",
       "  tableresult = pd.read_sql(\"SELECT * FROM Training_DF_Youri\", fabric_conn)\n"
      ]
     }
@@ -133,7 +133,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "You will get an error using when using pyodbc. This doesn't matter for now since all we do is read tables which works just fine. There are workarounds for this, so feel free to explore these on your own. But as you can see below we are able to run the tableresult!"
+    "You will get an warning using when using pyodbc. This doesn't matter for now since all we do is read tables which works just fine. There are workarounds for this, so feel free to explore these on your own. But as you can see below we are able to run the tableresult!"
    ]
   },
   {
@@ -302,7 +302,7 @@
     {
      "data": {
       "text/plain": [
-       "('EDS2', 'INN-VEE-SQL12.innax.nl', 'YouriDibbet', '!nnax20242')"
+       "('INN-VEE-SQL12.innax.nl', 'EDS2', 'YouriDibbet', '!nnax20242')"
       ]
      },
      "execution_count": 9,
@@ -316,23 +316,252 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "sql_conn = pyodbc.connect(f'Trusted_Connection=yes;DRIVER={{ODBC Driver 17 for SQL Server}};SERVER={server};DATABASE={database};UID={uid};PWD={pwd};ConnectionTimeout=60')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
-     "ename": "OperationalError",
-     "evalue": "('08001', '[08001] [Microsoft][ODBC Driver 17 for SQL Server]Named Pipes Provider: Could not open a connection to SQL Server [53].  (53) (SQLDriverConnect); [08001] [Microsoft][ODBC Driver 17 for SQL Server]Login timeout expired (0); [08001] [Microsoft][ODBC Driver 17 for SQL Server]Invalid connection string attribute (0); [08001] [Microsoft][ODBC Driver 17 for SQL Server]A network-related or instance-specific error has occurred while establishing a connection to SQL Server. Server is not found or not accessible. Check if instance name is correct and if SQL Server is configured to allow remote connections. For more information see SQL Server Books Online. (53)')",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mOperationalError\u001b[0m                          Traceback (most recent call last)",
-      "Cell \u001b[1;32mIn[10], line 1\u001b[0m\n\u001b[1;32m----> 1\u001b[0m sql_conn \u001b[38;5;241m=\u001b[39m \u001b[43mpyodbc\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mconnect\u001b[49m\u001b[43m(\u001b[49m\u001b[38;5;124;43mf\u001b[39;49m\u001b[38;5;124;43m'\u001b[39;49m\u001b[38;5;124;43mTusted_Connection=yes;DRIVER=\u001b[39;49m\u001b[38;5;130;43;01m{{\u001b[39;49;00m\u001b[38;5;124;43mODBC Driver 17 for SQL Server\u001b[39;49m\u001b[38;5;130;43;01m}}\u001b[39;49;00m\u001b[38;5;124;43m;SERVER=\u001b[39;49m\u001b[38;5;132;43;01m{\u001b[39;49;00m\u001b[43mserver\u001b[49m\u001b[38;5;132;43;01m}\u001b[39;49;00m\u001b[38;5;124;43m;DATABASE=\u001b[39;49m\u001b[38;5;132;43;01m{\u001b[39;49;00m\u001b[43mdatabase\u001b[49m\u001b[38;5;132;43;01m}\u001b[39;49;00m\u001b[38;5;124;43m;UID=\u001b[39;49m\u001b[38;5;132;43;01m{\u001b[39;49;00m\u001b[43muid\u001b[49m\u001b[38;5;132;43;01m}\u001b[39;49;00m\u001b[38;5;124;43m;PWD=\u001b[39;49m\u001b[38;5;132;43;01m{\u001b[39;49;00m\u001b[43mpwd\u001b[49m\u001b[38;5;132;43;01m}\u001b[39;49;00m\u001b[38;5;124;43m;ConnectionTimeout=60\u001b[39;49m\u001b[38;5;124;43m'\u001b[39;49m\u001b[43m)\u001b[49m\n",
-      "\u001b[1;31mOperationalError\u001b[0m: ('08001', '[08001] [Microsoft][ODBC Driver 17 for SQL Server]Named Pipes Provider: Could not open a connection to SQL Server [53].  (53) (SQLDriverConnect); [08001] [Microsoft][ODBC Driver 17 for SQL Server]Login timeout expired (0); [08001] [Microsoft][ODBC Driver 17 for SQL Server]Invalid connection string attribute (0); [08001] [Microsoft][ODBC Driver 17 for SQL Server]A network-related or instance-specific error has occurred while establishing a connection to SQL Server. Server is not found or not accessible. Check if instance name is correct and if SQL Server is configured to allow remote connections. For more information see SQL Server Books Online. (53)')"
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "C:\\Users\\YouriDibbet\\AppData\\Local\\Temp\\ipykernel_13696\\3608991547.py:1: UserWarning: pandas only supports SQLAlchemy connectable (engine/connection) or database string URI or sqlite3 DBAPI2 connection. Other DBAPI2 objects are not tested. Please consider using SQLAlchemy.\n",
+      "  sqlresult = pd.read_sql(\"SELECT * FROM dbo.CordaanDB\", sql_conn)\n"
      ]
     }
    ],
    "source": [
-    "sql_conn = pyodbc.connect(f'DRIVER={{ODBC Driver 17 for SQL Server}};SERVER={server};DATABASE={database};UID={uid};PWD={pwd};ConnectionTimeout=60')"
+    "sqlresult = pd.read_sql(\"SELECT * FROM dbo.CordaanDB\", sql_conn)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>EAN code</th>\n",
+       "      <th>Allocatie punt</th>\n",
+       "      <th>Status</th>\n",
+       "      <th>Product</th>\n",
+       "      <th>Tenaamstelling</th>\n",
+       "      <th>tenaamstelling verkort</th>\n",
+       "      <th>Naam aansluiting</th>\n",
+       "      <th>Klant</th>\n",
+       "      <th>Afdeling</th>\n",
+       "      <th>Verantwoordelijke</th>\n",
+       "      <th>...</th>\n",
+       "      <th>Meterstand 1</th>\n",
+       "      <th>Meterstand 2</th>\n",
+       "      <th>Opname Datum</th>\n",
+       "      <th>Soort opname</th>\n",
+       "      <th>Laatst gewijzigd door</th>\n",
+       "      <th>Laatst gewijzigd</th>\n",
+       "      <th>Captarcode</th>\n",
+       "      <th>Caparprijs</th>\n",
+       "      <th>Weerdata</th>\n",
+       "      <th>Opmerkingen</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>871685900013591001</td>\n",
+       "      <td>Primair</td>\n",
+       "      <td>Actief</td>\n",
+       "      <td>Elektra</td>\n",
+       "      <td>None</td>\n",
+       "      <td>None</td>\n",
+       "      <td>None</td>\n",
+       "      <td>Cordaan</td>\n",
+       "      <td>VGZ</td>\n",
+       "      <td>None</td>\n",
+       "      <td>...</td>\n",
+       "      <td>None</td>\n",
+       "      <td>None</td>\n",
+       "      <td>None</td>\n",
+       "      <td>None</td>\n",
+       "      <td>Import script #TR-8181-Cordaan</td>\n",
+       "      <td>12-05-2023</td>\n",
+       "      <td>t/m 1 x 6A geschakeld net</td>\n",
+       "      <td>0,08</td>\n",
+       "      <td>None</td>\n",
+       "      <td>ter info: Pand heeft zonnepanelen; ivm terugle...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>871685920004287492</td>\n",
+       "      <td>Primair</td>\n",
+       "      <td>Actief</td>\n",
+       "      <td>Elektra</td>\n",
+       "      <td>None</td>\n",
+       "      <td>None</td>\n",
+       "      <td>None</td>\n",
+       "      <td>Cordaan</td>\n",
+       "      <td>Geen</td>\n",
+       "      <td>None</td>\n",
+       "      <td>...</td>\n",
+       "      <td>1192</td>\n",
+       "      <td>368</td>\n",
+       "      <td>01-05-2023</td>\n",
+       "      <td>Eigen opname</td>\n",
+       "      <td>Rene Stumpe</td>\n",
+       "      <td>23-06-2023</td>\n",
+       "      <td>&gt; 3 x 63A t/m 3 x 80A</td>\n",
+       "      <td>8,00</td>\n",
+       "      <td>None</td>\n",
+       "      <td>meters moeten nog geplaatst worden, maar EAN-c...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>871685920004287225</td>\n",
+       "      <td>Primair</td>\n",
+       "      <td>Actief</td>\n",
+       "      <td>Elektra</td>\n",
+       "      <td>None</td>\n",
+       "      <td>None</td>\n",
+       "      <td>None</td>\n",
+       "      <td>Cordaan</td>\n",
+       "      <td>Geen</td>\n",
+       "      <td>None</td>\n",
+       "      <td>...</td>\n",
+       "      <td>230</td>\n",
+       "      <td>354</td>\n",
+       "      <td>01-05-2023</td>\n",
+       "      <td>Eigen opname</td>\n",
+       "      <td>Rene Stumpe</td>\n",
+       "      <td>23-06-2023</td>\n",
+       "      <td>t/m 3 x 25A + t/m 1x80A</td>\n",
+       "      <td>0,78</td>\n",
+       "      <td>None</td>\n",
+       "      <td>meters moeten nog geplaatst worden, maar EAN-c...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>871685920004287232</td>\n",
+       "      <td>Primair</td>\n",
+       "      <td>Actief</td>\n",
+       "      <td>Elektra</td>\n",
+       "      <td>None</td>\n",
+       "      <td>None</td>\n",
+       "      <td>None</td>\n",
+       "      <td>Cordaan</td>\n",
+       "      <td>Geen</td>\n",
+       "      <td>None</td>\n",
+       "      <td>...</td>\n",
+       "      <td>3614</td>\n",
+       "      <td>5253</td>\n",
+       "      <td>01-05-2023</td>\n",
+       "      <td>Eigen opname</td>\n",
+       "      <td>Rene Stumpe</td>\n",
+       "      <td>23-06-2023</td>\n",
+       "      <td>t/m 3 x 25A + t/m 1x80A</td>\n",
+       "      <td>0,78</td>\n",
+       "      <td>None</td>\n",
+       "      <td>meters moeten nog geplaatst worden, maar EAN-c...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>871685920004287249</td>\n",
+       "      <td>Primair</td>\n",
+       "      <td>Actief</td>\n",
+       "      <td>Elektra</td>\n",
+       "      <td>None</td>\n",
+       "      <td>None</td>\n",
+       "      <td>None</td>\n",
+       "      <td>Cordaan</td>\n",
+       "      <td>Geen</td>\n",
+       "      <td>None</td>\n",
+       "      <td>...</td>\n",
+       "      <td>2945</td>\n",
+       "      <td>2867</td>\n",
+       "      <td>01-05-2023</td>\n",
+       "      <td>Eigen opname</td>\n",
+       "      <td>Rene Stumpe</td>\n",
+       "      <td>23-06-2023</td>\n",
+       "      <td>t/m 3 x 25A + t/m 1x80A</td>\n",
+       "      <td>0,78</td>\n",
+       "      <td>None</td>\n",
+       "      <td>meters moeten nog geplaatst worden, maar EAN-c...</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>5 rows × 116 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "             EAN code Allocatie punt  Status  Product Tenaamstelling  \\\n",
+       "0  871685900013591001        Primair  Actief  Elektra           None   \n",
+       "1  871685920004287492        Primair  Actief  Elektra           None   \n",
+       "2  871685920004287225        Primair  Actief  Elektra           None   \n",
+       "3  871685920004287232        Primair  Actief  Elektra           None   \n",
+       "4  871685920004287249        Primair  Actief  Elektra           None   \n",
+       "\n",
+       "  tenaamstelling verkort Naam aansluiting    Klant Afdeling Verantwoordelijke  \\\n",
+       "0                   None             None  Cordaan      VGZ              None   \n",
+       "1                   None             None  Cordaan     Geen              None   \n",
+       "2                   None             None  Cordaan     Geen              None   \n",
+       "3                   None             None  Cordaan     Geen              None   \n",
+       "4                   None             None  Cordaan     Geen              None   \n",
+       "\n",
+       "   ... Meterstand 1 Meterstand 2 Opname Datum  Soort opname  \\\n",
+       "0  ...         None         None         None          None   \n",
+       "1  ...         1192          368   01-05-2023  Eigen opname   \n",
+       "2  ...          230          354   01-05-2023  Eigen opname   \n",
+       "3  ...         3614         5253   01-05-2023  Eigen opname   \n",
+       "4  ...         2945         2867   01-05-2023  Eigen opname   \n",
+       "\n",
+       "            Laatst gewijzigd door Laatst gewijzigd                 Captarcode  \\\n",
+       "0  Import script #TR-8181-Cordaan       12-05-2023  t/m 1 x 6A geschakeld net   \n",
+       "1                     Rene Stumpe       23-06-2023      > 3 x 63A t/m 3 x 80A   \n",
+       "2                     Rene Stumpe       23-06-2023    t/m 3 x 25A + t/m 1x80A   \n",
+       "3                     Rene Stumpe       23-06-2023    t/m 3 x 25A + t/m 1x80A   \n",
+       "4                     Rene Stumpe       23-06-2023    t/m 3 x 25A + t/m 1x80A   \n",
+       "\n",
+       "  Caparprijs  Weerdata                                        Opmerkingen  \n",
+       "0       0,08      None  ter info: Pand heeft zonnepanelen; ivm terugle...  \n",
+       "1       8,00      None  meters moeten nog geplaatst worden, maar EAN-c...  \n",
+       "2       0,78      None  meters moeten nog geplaatst worden, maar EAN-c...  \n",
+       "3       0,78      None  meters moeten nog geplaatst worden, maar EAN-c...  \n",
+       "4       0,78      None  meters moeten nog geplaatst worden, maar EAN-c...  \n",
+       "\n",
+       "[5 rows x 116 columns]"
+      ]
+     },
+     "execution_count": 12,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "sqlresult.head()"
    ]
   }
  ],
