Fix path reference, removed output

--- a/notebooks/01_sql_server_connect.ipynb
+++ b/notebooks/01_sql_server_connect.ipynb
@@ -19,7 +19,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -41,7 +41,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -69,7 +69,7 @@
     "2. Go to 'drivers' or 'stuurprogramma'\n",
     "3. Scroll through the list and find 'ODBC Driver XX for SQL Server\n",
     "\n",
-    "![ODBC Image](C:\\Users\\YouriDibbet\\PipInstallParty\\images\\ODBC.png)\n",
+    "![ODBC Image](..\\images\\ODBC.png)\n",
     "\n",
     "To download drivers visit: \n",
     "https://learn.microsoft.com/en-us/sql/connect/odbc/download-odbc-driver-for-sql-server?view=sql-server-ver16\n",
@@ -79,11 +79,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [],
    "source": [
-    "fabric_conn = pyodbc.connect(f'DRIVER={{ODBC Driver 17 for SQL Server}};SERVER=zezfh2i6qj2uli7c3vmpvjiteu-grhoq4vpsf4utolejfewhqiu3i.datawarehouse.fabric.microsoft.com;DATABASE=Training_Staging_Lakehouse_Youri;Authentication=ActiveDirectoryPassword;UID=SVC_PowerBi@innax.nl;PWD=kz3baCPF3KmABc8DpXeyVacbE6QkV5Nh;ConnectionTimeout=60')"
+    "fabric_conn = pyodbc.connect(f'DRIVER={{ODBC Driver 17 for SQL Server}}; \\\n",
+    "                             SERVER={f_server}; \\\n",
+    "                             DATABASE={f_database}; \\\n",
+    "                             Authentication=ActiveDirectoryPassword; \\\n",
+    "                             UID={f_uid}; \\\n",
+    "                             PWD={f_pwd}; \\\n",
+    "                             ConnectionTimeout=60')"
    ]
   },
   {
@@ -120,7 +126,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -141,7 +147,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 32,
    "metadata": {},
    "outputs": [],
    "source": [
